@@ -139,7 +139,7 @@ int gfal_Locality_srmv2_generic_internal(	gfal_srmv2_opt* opts,
 	if(ret >=0){
 		srmv2_mdstatuses = output.statuses;
 		if(srmv2_mdstatuses->status != 0){
-			g_set_error(&tmp_err, 0, srmv2_mdstatuses->status, "Error reported from srm_ifce : %d %s", 
+			g_set_error(&tmp_err, 0, srmv2_mdstatuses->status, "Error  srm_ifce : %d %s", 
 							srmv2_mdstatuses->status, srmv2_mdstatuses->explanation);
 			ret = -1;
 		} else {
