@@ -75,6 +75,8 @@ int main(int argc, char** argv){
      gfalt_set_user_defined_checksum(my_params,"ADLER32",argv[2], NULL);
      gfalt_set_monitor_callback(my_params, &call_perf,&tmp_err);
      gfalt_set_nbstreams(my_params, 0, &tmp_err);
+	// gfalt_set_src_spacetoken(my_params, "DTEAMLCGUTILSTEST", &tmp_err);     
+// gfalt_set_dst_spacetoken(my_params, "DTEAMLCGUTILSTESTF", &tmp_err);     
 	 // begin copy
 
     for(i=3; i < argc; ++i){
